nft-meta/cmd/nft-meta/k8s/03-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-nft-meta-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/nft-meta
