nft-meta/cmd/nft-meta/k8s/03-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-nft-meta-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/nft-meta

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nft-meta-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-nft-meta-prefix@kubernetescrd

spec:
  rules:
    - host:
      http:
        paths:
          - path: /api/nft-meta
            pathType: Prefix
            backend:
              service:
                name: nft-meta
                port:
                  number: 30100
